--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,5 +1,5 @@
-    <div class="d-flex flex-row justify-content-center">
-        <div class="d-flex flex-column align-items-center pt-5">
+    <div class="d-flex flex-row justify-content-center mb-5">
+        <div class="d-flex flex-column align-items-center pt-5 pb-5" >
            
 
             
