--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,9 +1,9 @@
-    <div class="d-flex flex-column p-3 ">
+    <div class="d-flex flex-column m-5">
             <p class="fs-1 mt-3 pb-4">Bienvenido</p>
             <p class="fw-light fs-6 ">Esta es mi solución a la actividad 1 - Lección 3 del master Desarrollador Fullstack de la EIP. </p>
 
             <p class="fw-light fs-6 ">Por favor usa los botones del menu de navegación en la parte de arriba para navegar este sitio. </p>
 
-            <a href="README.md" >Click aqui para ver el readme.md de este proyecto</a>
+            <a href="https://github.com/MigalejoLejo/EIP_Ang_A1/blob/main/README.md" >Click aqui para ver el readme.md de este proyecto</a>
 
     </div>
