--- a/src/app/pages/curriculum/curriculum.component.html
+++ b/src/app/pages/curriculum/curriculum.component.html
@@ -1,1 +1,161 @@
-<p>curriculum works!</p>
+<section style="background-color: #eee;" class="mb-5">
+    <div class="container py-5">
+
+        <div class="row">
+            <div class="col-lg-4">
+                
+
+                <div class="card mb-4">
+                    <div class="card-body text-center">
+                        <img src="./assets/profilImage.jpg" alt="avatar" class="rounded-circle img-fluid"
+                            style="width: 150px;">
+                        <h5 class="my-3">Miguel Correa</h5>
+                        <p class="text-muted mb-1">iOS Developer at PwC</p>
+                        <p class="text-muted mb-4">Santa Cruz, Tenerife, ES</p>
+                    </div>
+                </div>
+
+
+
+                <div>
+                    <div class="card mb-4 mb-md-0">
+                        <div class="card-body">
+                            <p class="mb-4"><span class="text-primary font-italic me-1">Habilidades</span>
+                            </p>
+                            <p class="mb-1" style="font-size: .77rem;">Web Design</p>
+                            <div class="progress rounded" style="height: 5px;">
+                                <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <p class="mt-4 mb-1" style="font-size: .77rem;">Website Markup</p>
+                            <div class="progress rounded" style="height: 5px;">
+                                <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <p class="mt-4 mb-1" style="font-size: .77rem;">iOS SwiftUI</p>
+                            <div class="progress rounded" style="height: 5px;">
+                                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <p class="mt-4 mb-1" style="font-size: .77rem;">Backend with Java</p>
+                            <div class="progress rounded" style="height: 5px;">
+                                <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-lg-8">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <p class="mb-0">Nombre completo</p>
+                            </div>
+                            <div class="col-sm-9">
+                                <p class="text-muted mb-0">Miguel Alejandro Correa Avila</p>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <p class="mb-0">Email</p>
+                            </div>
+                            <div class="col-sm-9">
+                                <p class="text-muted mb-0">miguel@correa-avila.com</p>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <p class="mb-0">LinkedIn</p>
+                            </div>
+                            <div class="col-sm-9">
+                                <a class="text-muted mb-0"
+                                    href="https://www.linkedin.com/in/miguelcorreaavila/ ">https://www.linkedin.com/in/miguelcorreaavila/</a>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <p class="mb-0">GitHub</p>
+                            </div>
+                            <div class="col-sm-9">
+                                <a class="text-muted mb-0"
+                                    href="https://github.com/MigalejoLejo">https://github.com/MigalejoLejo</a>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <p class="mb-0">Address</p>
+                            </div>
+                            <div class="col-sm-9">
+                                <p class="text-muted mb-0">Santa Cruz, Tenerife, ESPAÑA</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col">
+                    <ul class="list-group list-group-light">
+
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div class="d-flex align-items-center ">
+                                <img src="./assets/pwc.jpg" alt=""
+                                    style="width: 45px; height: 45px" class="rounded-circle align-self-start" />
+                                <div class="ms-3">
+                                    <p class="fw-bold mb-1">Jr. iOS Developer</p>
+                                    <p class="text-muted mb-0">PwC España · Full-time</p>
+                                    <p class="text-muted mb-0">Apr 2023 - Present · 4 mos</p>
+                                    <p class="text-muted mb-0">Santa Cruz de Tenerife, Canary Islands, Spain · On-site</p>
+
+                                </div>
+                            </div>
+                            <span class="badge rounded-pill badge-success">Active</span>
+                        </li>
+
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div class="d-flex align-items-center ">
+                                <img src="./assets/apple.jpg" alt=""
+                                    style="width: 45px; height: 45px" class="rounded-circle align-self-start" />
+                                <div class="ms-3">
+                                    <p class="fw-bold mb-1">
+                                        AI/ML Annotation Analyst</p>
+                                    <p class="text-muted mb-0">Apple · Full-time</p>
+                                    <p class="text-muted mb-0">Aug 2020 - Apr 2023 · 2 yrs 9 mos</p>
+                                    <p class="text-muted mb-0">Barcelona, Catalonia, Spain</p>
+
+                                </div>
+                            </div>
+                            <span class="badge rounded-pill badge-success">Active</span>
+                        </li>
+
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div class="d-flex align-items-center ">
+                                <img src="./assets/na.jpg" alt=""
+                                    style="width: 45px; height: 45px" class="rounded-circle align-self-start" />
+                                <div class="ms-3">
+                                    <p class="fw-bold mb-1">
+                                        Media Researcher</p>
+                                    <p class="text-muted mb-0">news aktuell GmbH · Full-time</p>
+                                    <p class="text-muted mb-0">Dec 2019 - Aug 2020 · 9 mos</p>
+                                    <p class="text-muted mb-0">SHamburg, Germany</p>
+
+                                </div>
+                            </div>
+                            <span class="badge rounded-pill badge-success">Active</span>
+                        </li>
+                    </ul>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+</section>
