--- a/src/app/pages/formular/formular.component.html
+++ b/src/app/pages/formular/formular.component.html
@@ -1,16 +1,29 @@
-<form class="p-3">
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+<form class="p-3 mb-5">
+    <div class="d-flex flex-column pr-3 ">
+        <p class="fs-1 mt-3 pb-4">Contactame</p>
+    </div>
+
+    <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Tu Email</label>
+        <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+
+    </div>
+    <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Tu mensaje</label>
+        <textarea class="form-control" id="textArea" rows="3"></textarea>
+    </div>
+
+    <div id="disclaimer" class="form-text"> Marca la casilla de abajo, just for fun (igual esto es un mockup y no
+        funciona, asi que ni guardaremos tus datos, ni los compartiremos con nadie :-P ... y tampoco pasara nada al
+        cliquearla) </div>
+    <div class="mb-3 mt-3 form-check">
+        <input type="checkbox" class="form-check-input" id="checkbox">
+
+        <label class="form-check-label" for="formCheck">Entendido</label>
+    </div>
+    <div class="d-flex flex-row justify-content-center
+    justify-content-sm-start">
+        <button type="submit" class="btn btn-primary bg">Enviar</button>
+    </div>
+
 </form>
