added colors to navbar and a more contained formular

--- a/src/app/pages/formular/formular.component.html
+++ b/src/app/pages/formular/formular.component.html
@@ -3,27 +3,40 @@
         <p class="fs-1 mt-3 pb-4">Contactame</p>
     </div>
 
-    <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Tu Email</label>
-        <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+    <div class="d-flex flex-column align-items-center">
+        <div>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Tu Email</label>
+                <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+    
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Tu mensaje</label>
+                <textarea class="form-control" id="textArea" rows="3"></textarea>
+            </div>
+    
+            <div id="disclaimer" class="form-text"> Marca la casilla de abajo, just for fun (igual esto es un mockup y no
+                funciona, asi que ni guardaremos tus datos, ni los compartiremos con nadie :-P ... y tampoco pasara nada al
+                cliquearla) </div>
+            <div class="mb-3 mt-3 form-check">
+                <input type="checkbox" class="form-check-input" id="checkbox">
+    
+                <label class="form-check-label" for="formCheck">Entendido</label>
+            </div>
+            <div class="d-flex flex-row justify-content-center
+                justify-content-sm-start">
+                <button type="submit" class="btn btn-primary bg">Enviar</button>
+            </div>
 
-    </div>
-    <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Tu mensaje</label>
-        <textarea class="form-control" id="textArea" rows="3"></textarea>
-    </div>
+        </div>
 
-    <div id="disclaimer" class="form-text"> Marca la casilla de abajo, just for fun (igual esto es un mockup y no
-        funciona, asi que ni guardaremos tus datos, ni los compartiremos con nadie :-P ... y tampoco pasara nada al
-        cliquearla) </div>
-    <div class="mb-3 mt-3 form-check">
-        <input type="checkbox" class="form-check-input" id="checkbox">
+      
 
-        <label class="form-check-label" for="formCheck">Entendido</label>
-    </div>
-    <div class="d-flex flex-row justify-content-center
-    justify-content-sm-start">
-        <button type="submit" class="btn btn-primary bg">Enviar</button>
+
+
+
+
+
     </div>
 
 </form>
