added colors to navbar and a more contained form

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,13 @@
-<nav class="navbar navbar-expand bg-body-tertiary position-sticky top-0 start-0 end-0 z-3 ">
+<nav class="navbar bg-body-tertiary position-sticky top-0 start-0 end-0 z-3">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="">EIP</a>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" routerLink="curriculum">Curriculum</a>
-        <a class="nav-link" routerLink="formular">Formular</a>
-      
-      </div>
-    </div>
+    <ul class="nav nav-pills">
+      <a class="navbar-brand" routerLink="">EIP</a>
+      <li class="nav-item">
+        <a class="nav-link  hover-shadow" [ngClass]="{'active': router.url === '/curriculum'}" routerLink="curriculum">Curriculum</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link hover-zoom" [ngClass]="{'active': router.url === '/formular'}"  routerLink="formular">Formular</a>
+      </li>
+    </ul>
   </div>
 </nav>
