changed ui to spanish and created a new directive

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,10 @@
         <a class="nav-link  hover-shadow" [ngClass]="{'active': router.url === '/curriculum'}" routerLink="curriculum">Curriculum</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link hover-zoom" [ngClass]="{'active': router.url === '/formular'}"  routerLink="formular">Formular</a>
+        <a class="nav-link hover-zoom" [ngClass]="{'active': router.url === '/formular'}"  routerLink="formular">Contacto</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link hover-zoom" [ngClass]="{'active': router.url === '/login'}"  routerLink="login">Iniciar Sesión</a>
       </li>
     </ul>
   </div>
