--- a/src/app/pages/curriculum/curriculum.component.html
+++ b/src/app/pages/curriculum/curriculum.component.html
@@ -10,7 +10,7 @@
                         <img src="./assets/profilImage.jpg" alt="avatar" class="rounded-circle img-fluid"
                             style="width: 150px;">
                         <h5 class="my-3">Miguel Correa</h5>
-                        <p class="text-muted mb-1">iOS Developer at PwC</p>
+                        <p class="text-muted mb-1">Desarrollador iOS en PwC</p>
                         <p class="text-muted mb-4">Santa Cruz, Tenerife, ES</p>
                     </div>
                 </div>
@@ -22,12 +22,12 @@
                         <div class="card-body">
                             <p class="mb-4"><span class="text-primary font-italic me-1">Habilidades</span>
                             </p>
-                            <p class="mb-1" style="font-size: .77rem;">Web Design</p>
+                            <p class="mb-1" style="font-size: .77rem;">Diseño Web</p>
                             <div class="progress rounded" style="height: 5px;">
                                 <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50"
                                     aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <p class="mt-4 mb-1" style="font-size: .77rem;">Website Markup</p>
+                            <p class="mt-4 mb-1" style="font-size: .77rem;">React Native</p>
                             <div class="progress rounded" style="height: 5px;">
                                 <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
                                     aria-valuemin="0" aria-valuemax="100"></div>
@@ -37,7 +37,7 @@
                                 <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
                                     aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <p class="mt-4 mb-1" style="font-size: .77rem;">Backend with Java</p>
+                            <p class="mt-4 mb-1" style="font-size: .77rem;">Desarrollo Backend con Java</p>
                             <div class="progress rounded" style="height: 5px;">
                                 <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
                                     aria-valuemin="0" aria-valuemax="100"></div>
@@ -92,7 +92,7 @@
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
-                                <p class="mb-0">Address</p>
+                                <p class="mb-0">Dirección</p>
                             </div>
                             <div class="col-sm-9">
                                 <p class="text-muted mb-0">Santa Cruz, Tenerife, ESPAÑA</p>
@@ -110,14 +110,14 @@
                                 <img src="./assets/pwc.jpg" alt=""
                                     style="width: 45px; height: 45px" class="rounded-circle align-self-start" />
                                 <div class="ms-3">
-                                    <p class="fw-bold mb-1">Jr. iOS Developer</p>
-                                    <p class="text-muted mb-0">PwC España · Full-time</p>
-                                    <p class="text-muted mb-0">Apr 2023 - Present · 4 mos</p>
-                                    <p class="text-muted mb-0">Santa Cruz de Tenerife, Canary Islands, Spain · On-site</p>
+                                    <p class="fw-bold mb-1">Desarrollador Junio iOS</p>
+                                    <p class="text-muted mb-0">PwC España · Tiempo Completo</p>
+                                    <p class="text-muted mb-0">Abril 2023 - Hoy · 4 meses</p>
+                                    <p class="text-muted mb-0">Santa Cruz de Tenerife, Islas Canarias, España</p>
 
                                 </div>
                             </div>
-                            <span class="badge rounded-pill badge-success">Active</span>
+                            <span class="badge rounded-pill badge-success">Activo</span>
                         </li>
 
                         <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -126,14 +126,14 @@
                                     style="width: 45px; height: 45px" class="rounded-circle align-self-start" />
                                 <div class="ms-3">
                                     <p class="fw-bold mb-1">
-                                        AI/ML Annotation Analyst</p>
-                                    <p class="text-muted mb-0">Apple · Full-time</p>
-                                    <p class="text-muted mb-0">Aug 2020 - Apr 2023 · 2 yrs 9 mos</p>
-                                    <p class="text-muted mb-0">Barcelona, Catalonia, Spain</p>
+                                        AI/ML Analista de datos</p>
+                                    <p class="text-muted mb-0">Apple · Tiempo completo</p>
+                                    <p class="text-muted mb-0">Agosto 2020 - Abril 2023 · 2 años 9 meses</p>
+                                    <p class="text-muted mb-0">Barcelona, Cataluña, España</p>
 
                                 </div>
                             </div>
-                            <span class="badge rounded-pill badge-success">Active</span>
+                            <span class="badge rounded-pill badge-success">Activo</span>
                         </li>
 
                         <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -143,13 +143,13 @@
                                 <div class="ms-3">
                                     <p class="fw-bold mb-1">
                                         Media Researcher</p>
-                                    <p class="text-muted mb-0">news aktuell GmbH · Full-time</p>
-                                    <p class="text-muted mb-0">Dec 2019 - Aug 2020 · 9 mos</p>
-                                    <p class="text-muted mb-0">SHamburg, Germany</p>
+                                    <p class="text-muted mb-0">news aktuell GmbH · Tiempo completo</p>
+                                    <p class="text-muted mb-0">Diciembre 2019 - Agosto 2020 · 9 Meses</p>
+                                    <p class="text-muted mb-0">Hamburgo, Alemania</p>
 
                                 </div>
                             </div>
-                            <span class="badge rounded-pill badge-success">Active</span>
+                            <span class="badge rounded-pill badge-success">Activo</span>
                         </li>
                     </ul>
                 </div>
