--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -5,7 +5,7 @@
             
             <img src="./assets/notFound.jpg" alt="not-found" class="rounded-4">
 
-            <p class="fs-5 mt-3 mb-3">The page you are looking for does not exist.</p>
-            <a class="nav-link active" aria-current="page" routerLink="">Click here and navigate Home</a>
+            <p class="fs-5 mt-3 mb-3">La pagina que buscas no existe.</p>
+            <a class="nav-link active" aria-current="page" routerLink="">Click aqui para ir a la pagina principal</a>
         </div>
     </div>
