--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,16 +2,17 @@
   <div class="container-fluid">
     <ul class="nav nav-pills">
       <a class="navbar-brand" routerLink="">EIP</a>
+
       <li onHoverOverMenuLink class="nav-item">
         <a class="nav-link  hover-shadow" [ngClass]="{'active': router.url === '/curriculum'}" routerLink="curriculum">Curriculum</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link hover-zoom" [ngClass]="{'active': router.url === '/formular'}"  routerLink="formular">Contacto</a>
+
+      <li onHoverOverMenuLink class="nav-item">
+        <a class="nav-link hover-zoom" [ngClass]="{'active': router.url === '/contact'}"  routerLink="contact">Contacto</a>
       </li>
-      <li class="nav-item">
+
+      <li onHoverOverMenuLink class="nav-item">
         <a class="nav-link hover-zoom" [ngClass]="{'active': router.url === '/login'}"  routerLink="login">Iniciar Sesión</a>
-      <li onHoverOverMenuLink ="nav-item">
-        <a class="nav-link hover-zoom" [ngClass]="{'active': router.url === '/formular'}"  routerLink="formular">Formular</a>
       </li>
     </ul>
   </div>
