redesign directive for nav buttons

--- a/src/app/pages/formular/contact.component.html
+++ b/src/app/pages/formular/contact.component.html
@@ -6,12 +6,12 @@
     <div class="d-flex flex-column align-items-center">
         <div>
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Tu Email</label>
+                <label for="inputEmail" class="form-label">Tu Email</label>
                 <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
     
             </div>
             <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Tu mensaje</label>
+                <label for="inputMessage" class="form-label">Tu mensaje</label>
                 <textarea class="form-control" id="textArea" rows="3"></textarea>
             </div>
     
