--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -6,9 +6,7 @@
         <p class="fw-light fs-6 ">Por favor usa los botones del menu de navegación en la parte de arriba para navegar
                 este sitio. </p>
         <div>
-
-                <a onHoverOverLink href="https://github.com/MigalejoLejo/EIP_Ang_A1/blob/main/README.md">Click aqui para
-                        ver el readme.md de este proyecto</a>
+           <a onHoverOverLink href="https://github.com/MigalejoLejo/EIP_Ang_A1/blob/main/README.md">Click aqui para ver el readme.md de este proyecto</a>
         </div>
 
 
